@@ -2,6 +2,8 @@ Revision history for Playwright
 
 0.010 2021-07-27 TEODESIAN
     - Fix issue with yargs fix breaking invocation in Playwright.pm
+    - Fix issue with child selectors being broken
+    - Add ability to specify library path
 
 0.009 2021-07-26 TEODESIAN
     - Remove dependency on yargs in bin/playwright_server
